frog exercise in class

--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-hello this is my cool website
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mia's Homepage</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>I love frogs</h1>
+    <p>Frogs are amphibians that have been around for a really long time. They are pretty and super cute!</p>
+    <hr />
+
+    <p class="rogers">Mr Rogers also loves <a href="http://mrrogers.com/frogs-are-nice">frogs</a></p>
+
+    <img class="rogers-pic" src="ww-frogs-budgetts.webp"/>
+
+    <ul>
+<li>Homework 1 </li>
+<li>item2 </li>
+<li>item3 </li>
+<li>item4 </li>
+        </ul>
+
+        <ol>
+            <li>item1 </li>
+            <li>item2 </li>
+            <li>item3 </li>
+            <li>item4 </li>
+                    </ol>
+</body>
+</html>
