Make a pretty homepage homework

--- a/index.html
+++ b/index.html
@@ -8,26 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>I love frogs</h1>
-    <p>Frogs are amphibians that have been around for a really long time. They are pretty and super cute!</p>
-    <hr />
-
-    <p class="rogers">Mr Rogers also loves <a href="http://mrrogers.com/frogs-are-nice">frogs</a></p>
-
-    <img class="rogers-pic" src="ww-frogs-budgetts.webp"/>
-
+    <div class="wrapper">
+    <h1>Mia's Homepage</h1>
+    <img class="neonsign"
+     src="etienne-girardet.jpg"
+     alt="neon sign reading what is your story?">
+<p>Photo by <a href="https://unsplash.com/@etiennegirardet?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Etienne Girardet</a> on <a href="https://unsplash.com/s/photos/neon-sign?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+</p>
+    <h2>Homeworks</h2>
     <ul>
-<li>Homework 1 </li>
-<li>item2 </li>
-<li>item3 </li>
-<li>item4 </li>
-        </ul>
+        <li>Homepage homework. You are here now!</li>
+        <li><a href="Homeworks/Homework2">SVG Bike</a></li>
+    </ul>
+<a href="https://2018.aninterestingday.com/">
+<img class="inspire"
+src="interestingday.png"
+alt="interesting day conference"></a>
 
-        <ol>
-            <li>item1 </li>
-            <li>item2 </li>
-            <li>item3 </li>
-            <li>item4 </li>
-                    </ol>
+
+<p><a 
+    class="button"
+    href="#">Call to action!</a> </p>
+</div>
 </body>
 </html>
