--- a/project-one/index.html
+++ b/project-one/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="container">
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 2388 1668">
         <defs>
           <style>
@@ -55,7 +56,7 @@
           </g>
         </g>
       </svg>
-      
+    </div>
 
 </body>
 </html>
