--- a/Homeworks/lets-get-flexy/index.html
+++ b/Homeworks/lets-get-flexy/index.html
@@ -21,11 +21,11 @@
     
         .box-1{
             flex:2;
-            order:1;
+            order:2;
         }
         .box-2{
             flex:1;
-            order:2;
+            order:1;
         }
         .box-3{
             flex:1;
@@ -39,9 +39,9 @@
     <div class="container-1"> 
         <div class="box-1">
             <h3>Box One</h3>
-            <p><img class="one"
+            <p><img class="profile-pic-one"
                 src="profile-pic-one.jpeg">
-                <img class="two"
+                <img class="profile-pic-two"
                 src="profile-pic-two.jpeg"> 
             </p>
         </div>
