--- a/project-two/index.html
+++ b/project-two/index.html
@@ -11,19 +11,18 @@
 <body>
 <div class="navigation"></div>
 <ul>
-    <li><a href="default.asp">spring</a></li>
-    <li><a href="news.asp">summer</a></li>
-    <li><a href="contact.asp">adult diaries</a></li>
-    <li><a href="about.asp">fall</a></li>
-    <li><a href="about.asp">winter</a></li>
+    <li><a href=#spring>spring</a></li>
+    <li><a href=#summer>summer</a></li>
+    <li><a href=#top>adult diaries</a></li>
+    <li><a href=#fall>fall</a></li>
+    <li><a href=#winter>winter</a></li>
   </ul>
 </div>
 
-<div class="landing"></div>
+<div class="landing" id="top">
 <h1>memories tethered to the first years of adulthood</h1>
-</div>
 
-<div class="flex-left">
+<div class="flex-left" id="spring">
     <div class="img">
         <img src="hydro.jpeg">
     </div>
@@ -38,7 +37,7 @@
     </div>
 </div>
 
-<div class="flex-center">
+<div class="flex-left">
     <div class="img">
         <img src="powells.jpeg">
     </div>
@@ -50,7 +49,7 @@
     </div>
 </div>
 
-<div class="flex-left">
+<div class="flex-right" id="summer">
     <div class="img">
         <img src="berries.jpeg">
     </div>
@@ -59,7 +58,7 @@
     </div>
 </div>
 
-<div class="flex-right">
+<div class="flex-left">
     <div class="img">
         <img src="helens.jpeg">
     </div>
@@ -68,13 +67,67 @@
     </div>
 </div>
 
-<div class="flex-left">
+<div class="flex-right">
     <div class="text">
         <p>It always feels like it finally starts to feel like summer when it is time to go back to school. I spent a lot of time outside this summer and I know how truly I will miss the sun and warm air as the leaves start to change and days get shorter and shorter. I haven’t been camping since I was in the 2nd or 3rd grade and it was such a joy. You can always sign me up for a remote, tech-free getaway. Sometimes I wish I could live 100% disconnected and off-grid. Sometime I question my desired career path.</p>
     </div>
 </div>
 
+<div class="flex-left" id="fall">
+    <div class="img">
+        <img src="morning.png">
+    </div>
+    <div class="img">
+        <img src="flowers.png">
+    </div>
+    <div class="img">
+        <img src="thatchers.png">
+    </div>
+</div>
 
+<div class="flex-right">
+    <div class="text">
+        <p>Getting back into a routine as a new term begins makes me feel motivated and on top of it all. Remembering how to juggle classes, work, and my “social” life is usually a little wobblely in the beginning though. I’ve been avoiding homework all weekend and have some much work to do tonight, which will most likely bleed into tomorrow morning until my first class starts.</p>
+    </div>
+</div>
+
+<div class="flex-left">
+    <div class="img">
+        <img src="pumpkins.png">
+    </div>
+    <div class="img">
+        <img src="pursedog.png">
+    </div>
+</div>
+
+<div class="flex-left" id="winter">
+    <div class="text">
+        <p>Oh what a lovely couple weeks it has been. The winter cold has been biting bad but the people (and pets) I get to spend time with every week are making me feel so fulfilled and warm. Ever since the new year began, I’ve been tagging along with Ella to her campus and have been zooming/working from there. It’s so weird to have missed being in that school environment.</p>
+    </div>
+</div>
+
+<div class="flex-left">
+    <div class="img">
+        <img src="workspace.png">
+    </div>
+    <div class="img">
+        <img src="rlvnt.png">
+    </div>
+</div>
+
+<div class="flex-left">
+    <div class="img">
+        <img src="bar.png">
+    </div>
+    <div class="img">
+        <img src="wsuv.png">
+    </div>
+    <div class="img">
+        <img src="gorge.png">
+    </div>
+</div>
+
+</div>
 
 
 
