post alanna's helpful video

--- a/project-two/index.html
+++ b/project-two/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="navigation"></div>
+<nav>
 <ul>
     <li><a href=#spring>spring</a></li>
     <li><a href=#summer>summer</a></li>
@@ -23,14 +23,17 @@
     <li><a href=#fall>fall</a></li>
     <li><a href=#winter>winter</a></li>
   </ul>
-</div>
+</nav>
 
 <div class="landing" id="top">
 <h1>memories tethered to the first years of adulthood</h1>
 
 <div class="flex-left" id="spring">
     <div class="img">
+        <figure>
         <img src="hydro.jpeg">
+        <figcaption>Mt. Hood looking gorgeous this morning</figcaption>
+    </figure>
     </div>
     <div class="img">
         <img src="pups.jpeg">
