added all captions and font styles

--- a/project-two/index.html
+++ b/project-two/index.html
@@ -37,6 +37,7 @@
     </div>
     <div class="img">
         <img src="pups.jpeg">
+        <figcaption>Michael and Hank post-nap</figcaption>
     </div>
 </div>
 
@@ -49,30 +50,37 @@
 <div class="flex-left">
     <div class="img">
         <img src="powells.jpeg">
+        <figcaption>Morning shopping downtown Portland</figcaption>
     </div>
     <div class="img">
         <img src="coast.jpeg">
+        <figcaption>Coastal hike before Sara leaves</figcaption>
     </div>
     <div class="img">
         <img src="shadow.jpeg">
+        <figcaption>Morning light reflections</figcaption>
     </div>
 </div>
 
 <div class="flex-right" id="summer">
     <div class="img">
         <img src="berries.jpeg">
+        <figcaption>First of many trips to the berry fields</figcaption>
     </div>
     <div class="img">
         <img src="sunrise.jpeg">
+        <figcaption>Above the clouds this morning</figcaption>
     </div>
 </div>
 
 <div class="flex-left">
     <div class="img">
         <img src="helens.jpeg">
+        <figcaption>Birthday hike</figcaption>
     </div>
     <div class="img">
         <img src="camp.jpeg">
+        <figcaption>Camping before school resumes</figcaption>
     </div>
 </div>
 
@@ -85,12 +93,15 @@
 <div class="flex-left" id="fall">
     <div class="img">
         <img src="morning.png">
+        <figcaption>Slow morning</figcaption>
     </div>
     <div class="img">
         <img src="flowers.png">
+        <figcaption>Fresh market flowers from Riley</figcaption>
     </div>
     <div class="img">
         <img src="thatchers.png">
+        <figcaption>Lattes and good conversations</figcaption>
     </div>
 </div>
 
@@ -103,9 +114,11 @@
 <div class="flex-left">
     <div class="img">
         <img src="pumpkins.png">
+        <figcaption>Visited the Safeway Pumpkin Patch</figcaption>
     </div>
     <div class="img">
         <img src="pursedog.png">
+        <figcaption>Purse dog</figcaption>
     </div>
 </div>
 
@@ -118,21 +131,26 @@
 <div class="flex-left">
     <div class="img">
         <img src="workspace.png">
+        <figcaption>The workspace</figcaption>
     </div>
     <div class="img">
         <img src="rlvnt.png">
+        <figcaption>Saturday coffee date</figcaption>
     </div>
 </div>
 
 <div class="flex-left">
     <div class="img">
         <img src="bar.png">
+        <figcaption>Riley in his element</figcaption>
     </div>
     <div class="img">
         <img src="wsuv.png">
+        <figcaption>Lunch break at WSUV</figcaption>
     </div>
     <div class="img">
         <img src="gorge.png">
+        <figcaption>Backyard views</figcaption>
     </div>
 </div>
 
