added meta tags

--- a/project-one/index.html
+++ b/project-one/index.html
@@ -5,6 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy V-day!</title>
+    
+    <!--  Essential META Tags -->
+    <meta property="og:title" content="Happy V-day">
+    <meta property="og:type" content="article" />
+    <meta property="og:image" content="podner.png">
+    <meta property="og:url" content="http://levymia.github.com/project-one/index.htm">
+    <meta name="twitter:card" content="summary_large_image">
+    
+    <!--  Non-Essential, But Required for Analytics -->
+    <meta property="fb:app_id" content="howdypodner" />
+    <meta name="twitter:site" content="@howdypodner">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
