--- a/project-two/index.html
+++ b/project-two/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>adult diaries</title>
 
+    <!--  Essential META Tags -->
+<meta property="og:title" content="Adult Diaries">
+<meta property="og:type" content="blog" />
+<meta property="og:image" content="gorge.png">
+<meta property="og:url" content="http://levymia.github.com/project-two/index.htm">
+<meta name="twitter:card" content="summary_large_image">
+
+<!--  Non-Essential, But Required for Analytics -->
+<meta property="fb:app_id" content="adult diaries" />
+<meta name="twitter:site" content="@adultdiaries">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
