made layout updates

--- a/project-two/index.html
+++ b/project-two/index.html
@@ -1,173 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>adult diaries</title>
-
+    <meta name="author" content="Mia Levey" />
     <!--  Essential META Tags -->
-<meta property="og:title" content="Adult Diaries">
-<meta property="og:type" content="blog" />
-<meta property="og:image" content="gorge.png">
-<meta property="og:url" content="http://levymia.github.com/project-two/index.htm">
-<meta name="twitter:card" content="summary_large_image">
+    <meta property="og:title" content="Adult Diaries" />
+    <meta property="og:type" content="blog" />
+    <meta property="og:image" content="gorge.png" />
+    <meta property="og:url" content="http://levymia.github.com/project-two" />
+    <meta name="twitter:card" content="summary_large_image" />
 
-<!--  Non-Essential, But Required for Analytics -->
-<meta property="fb:app_id" content="adult diaries" />
-<meta name="twitter:site" content="@adultdiaries">
+    <!--  Non-Essential, But Required for Analytics -->
+    <meta property="fb:app_id" content="adult diaries" />
+    <meta name="twitter:site" content="@adultdiaries" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,200;0,300;0,500;1,500&display=swap" rel="stylesheet">
-    
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<nav>
-<ul>
-    <li><a href=#spring>spring</a></li>
-    <li><a href=#summer>summer</a></li>
-    <li><a href=#top>adult diaries</a></li>
-    <li><a href=#fall>fall</a></li>
-    <li><a href=#winter>winter</a></li>
-  </ul>
-</nav>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,200;0,300;0,500;1,500&display=swap" rel="stylesheet" />
 
-<div class="landing" id="top">
-<h1>memories tethered to the first years of adulthood</h1>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li><a href="#spring">spring</a></li>
+        <li><a href="#summer">summer</a></li>
+        <li><a href="#top" class="title">adult diaries</a></li>
+        <li><a href="#fall">fall</a></li>
+        <li><a href="#winter">winter</a></li>
+      </ul>
+    </nav>
 
-<div class="flex-left" id="spring">
-    <div class="img">
-        <figure>
-        <img src="hydro.jpeg">
-        <figcaption>Mt. Hood looking gorgeous this morning</figcaption>
-    </figure>
-    </div>
-    <div class="img">
-        <img src="pups.jpeg">
-        <figcaption>Michael and Hank post-nap</figcaption>
-    </div>
-</div>
+    <div class="landing" id="top">
+      <h1>memories tethered to the first years of adulthood</h1>
+      <section id="spring">
+        <div class="flex-left">
+          <div class="img">
+            <figure>
+              <img src="hydro.jpeg" />
+              <figcaption>Mt. Hood looking gorgeous this morning</figcaption>
+            </figure>
+          </div>
+          <div class="img">
+            <img src="pups.jpeg" />
+            <figcaption>Michael and Hank post-nap</figcaption>
+          </div>
+        </div>
 
-<div class="flex-right">
-    <div class="text">
-        <p>Sara just left for Indianapolis and the house hasn’t felt the same since. Just a couple days ago we went down to Arch Cape, Oregon and did the Cape Falcon Trail. We both wore our Chacos and were grateful as our feet were caked in mud by the end of it and we would have ruined any other shoe...</p>
-    </div>
-</div>
+        <div class="flex-right">
+          <div class="text">
+            <p>Sara just left for Indianapolis and the house hasn’t felt the same since. Just a couple days ago we went down to Arch Cape, Oregon and did the Cape Falcon Trail. We both wore our Chacos and were grateful as our feet were caked in mud by the end of it and we would have ruined any other shoe...</p>
+          </div>
+        </div>
 
-<div class="flex-left">
-    <div class="img">
-        <img src="powells.jpeg">
-        <figcaption>Morning shopping downtown Portland</figcaption>
-    </div>
-    <div class="img">
-        <img src="coast.jpeg">
-        <figcaption>Coastal hike before Sara leaves</figcaption>
-    </div>
-    <div class="img">
-        <img src="shadow.jpeg">
-        <figcaption>Morning light reflections</figcaption>
-    </div>
-</div>
+        <div class="flex-left">
+          <div class="img">
+            <img src="powells.jpeg" />
+            <figcaption>Morning shopping downtown Portland</figcaption>
+          </div>
+          <div class="img">
+            <img src="coast.jpeg" />
+            <figcaption>Coastal hike before Sara leaves</figcaption>
+          </div>
+          <div class="img">
+            <img src="shadow.jpeg" />
+            <figcaption>Morning light reflections</figcaption>
+          </div>
+        </div>
+      </section>
+      <div class="flex-right" id="summer">
+        <div class="img">
+          <img src="berries.jpeg" />
+          <figcaption>First of many trips to the berry fields</figcaption>
+        </div>
+        <div class="img">
+          <img src="sunrise.jpeg" />
+          <figcaption>Above the clouds this morning</figcaption>
+        </div>
+      </div>
 
-<div class="flex-right" id="summer">
-    <div class="img">
-        <img src="berries.jpeg">
-        <figcaption>First of many trips to the berry fields</figcaption>
-    </div>
-    <div class="img">
-        <img src="sunrise.jpeg">
-        <figcaption>Above the clouds this morning</figcaption>
-    </div>
-</div>
+      <div class="flex-left">
+        <div class="img">
+          <img src="helens.jpeg" />
+          <figcaption>Birthday hike</figcaption>
+        </div>
+        <div class="img">
+          <img src="camp.jpeg" />
+          <figcaption>Camping before school resumes</figcaption>
+        </div>
+      </div>
 
-<div class="flex-left">
-    <div class="img">
-        <img src="helens.jpeg">
-        <figcaption>Birthday hike</figcaption>
-    </div>
-    <div class="img">
-        <img src="camp.jpeg">
-        <figcaption>Camping before school resumes</figcaption>
-    </div>
-</div>
+      <div class="flex-right">
+        <div class="text">
+          <p>It always feels like it finally starts to feel like summer when it is time to go back to school. I spent a lot of time outside this summer and I know how truly I will miss the sun and warm air as the leaves start to change and days get shorter and shorter. I haven’t been camping since I was in the 2nd or 3rd grade and it was such a joy. You can always sign me up for a remote, tech-free getaway. Sometimes I wish I could live 100% disconnected and off-grid. Sometime I question my desired career path.</p>
+        </div>
+      </div>
+      <section id="fall">
+        <div class="flex-left">
+          <div class="img">
+            <img src="morning.png" />
+            <figcaption>Slow morning</figcaption>
+          </div>
+          <div class="img">
+            <img src="flowers.png" />
+            <figcaption>Fresh market flowers from Riley</figcaption>
+          </div>
+          <div class="img">
+            <img src="thatchers.png" />
+            <figcaption>Lattes and good conversations</figcaption>
+          </div>
+        </div>
 
-<div class="flex-right">
-    <div class="text">
-        <p>It always feels like it finally starts to feel like summer when it is time to go back to school. I spent a lot of time outside this summer and I know how truly I will miss the sun and warm air as the leaves start to change and days get shorter and shorter. I haven’t been camping since I was in the 2nd or 3rd grade and it was such a joy. You can always sign me up for a remote, tech-free getaway. Sometimes I wish I could live 100% disconnected and off-grid. Sometime I question my desired career path.</p>
-    </div>
-</div>
+        <div class="flex-right">
+          <div class="text">
+            <p>Getting back into a routine as a new term begins makes me feel motivated and on top of it all. Remembering how to juggle classes, work, and my “social” life is usually a little wobblely in the beginning though. I’ve been avoiding homework all weekend and have some much work to do tonight, which will most likely bleed into tomorrow morning until my first class starts.</p>
+          </div>
+        </div>
 
-<div class="flex-left" id="fall">
-    <div class="img">
-        <img src="morning.png">
-        <figcaption>Slow morning</figcaption>
-    </div>
-    <div class="img">
-        <img src="flowers.png">
-        <figcaption>Fresh market flowers from Riley</figcaption>
-    </div>
-    <div class="img">
-        <img src="thatchers.png">
-        <figcaption>Lattes and good conversations</figcaption>
-    </div>
-</div>
+        <div class="flex-left">
+          <div class="img">
+            <img src="pumpkins.png" />
+            <figcaption>Visited the Safeway Pumpkin Patch</figcaption>
+          </div>
+          <div class="img">
+            <img src="pursedog.png" />
+            <figcaption>Purse dog</figcaption>
+          </div>
+        </div>
+      </section>
+      <div class="flex-left" id="winter">
+        <div class="text">
+          <p>Oh what a lovely couple weeks it has been. The winter cold has been biting bad but the people (and pets) I get to spend time with every week are making me feel so fulfilled and warm. Ever since the new year began, I’ve been tagging along with Ella to her campus and have been zooming/working from there. It’s so weird to have missed being in that school environment.</p>
+        </div>
+      </div>
 
-<div class="flex-right">
-    <div class="text">
-        <p>Getting back into a routine as a new term begins makes me feel motivated and on top of it all. Remembering how to juggle classes, work, and my “social” life is usually a little wobblely in the beginning though. I’ve been avoiding homework all weekend and have some much work to do tonight, which will most likely bleed into tomorrow morning until my first class starts.</p>
-    </div>
-</div>
+      <div class="flex-left">
+        <div class="img">
+          <img src="workspace.png" />
+          <figcaption>The workspace</figcaption>
+        </div>
+        <div class="img">
+          <img src="rlvnt.png" />
+          <figcaption>Saturday coffee date</figcaption>
+        </div>
+      </div>
 
-<div class="flex-left">
-    <div class="img">
-        <img src="pumpkins.png">
-        <figcaption>Visited the Safeway Pumpkin Patch</figcaption>
+      <div class="flex-left">
+        <div class="img">
+          <img src="bar.png" />
+          <figcaption>Riley in his element</figcaption>
+        </div>
+        <div class="img">
+          <img src="wsuv.png" />
+          <figcaption>Lunch break at WSUV</figcaption>
+        </div>
+        <div class="img">
+          <img src="gorge.png" />
+          <figcaption>Backyard views</figcaption>
+        </div>
+      </div>
     </div>
-    <div class="img">
-        <img src="pursedog.png">
-        <figcaption>Purse dog</figcaption>
-    </div>
-</div>
-
-<div class="flex-left" id="winter">
-    <div class="text">
-        <p>Oh what a lovely couple weeks it has been. The winter cold has been biting bad but the people (and pets) I get to spend time with every week are making me feel so fulfilled and warm. Ever since the new year began, I’ve been tagging along with Ella to her campus and have been zooming/working from there. It’s so weird to have missed being in that school environment.</p>
-    </div>
-</div>
-
-<div class="flex-left">
-    <div class="img">
-        <img src="workspace.png">
-        <figcaption>The workspace</figcaption>
-    </div>
-    <div class="img">
-        <img src="rlvnt.png">
-        <figcaption>Saturday coffee date</figcaption>
-    </div>
-</div>
-
-<div class="flex-left">
-    <div class="img">
-        <img src="bar.png">
-        <figcaption>Riley in his element</figcaption>
-    </div>
-    <div class="img">
-        <img src="wsuv.png">
-        <figcaption>Lunch break at WSUV</figcaption>
-    </div>
-    <div class="img">
-        <img src="gorge.png">
-        <figcaption>Backyard views</figcaption>
-    </div>
-</div>
-
-</div>
-
-
-
-</body>
+  </body>
 </html>
