--- a/project-one/index.html
+++ b/project-one/index.html
@@ -8,10 +8,11 @@
     
     <!--  Essential META Tags -->
     <meta property="og:title" content="Happy V-day">
+    <meta name="author" content="Mia Levy" />
     <meta property="og:type" content="article" />
     <meta property="og:image" content="podner.png">
-    <meta property="og:url" content="http://levymia.github.com/project-one/index.htm">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:url" content="http://levymia.github.com/project-one">
+    <meta name="twitter:card" content="podner.png">
     
     <!--  Non-Essential, But Required for Analytics -->
     <meta property="fb:app_id" content="howdypodner" />
