--- a/project-two/index.html
+++ b/project-two/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>adult diaries</title>
-    <meta name="author" content="Mia Levey" />
+   
     <!--  Essential META Tags -->
     <meta property="og:title" content="Adult Diaries" />
+    <meta name="author" content="Mia Levy" />
     <meta property="og:type" content="blog" />
-    <meta property="og:image" content="gorge.png" />
+    <meta property="og:image" content="powells.jpeg" />
     <meta property="og:url" content="http://levymia.github.com/project-two" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="powells.jpeg" />
 
     <!--  Non-Essential, But Required for Analytics -->
     <meta property="fb:app_id" content="adult diaries" />
@@ -38,6 +39,7 @@
 
     <div class="landing" id="top">
       <h1>memories tethered to the first years of adulthood</h1>
+      
       <section id="spring">
         <div class="flex-left">
           <div class="img">
@@ -73,7 +75,9 @@
           </div>
         </div>
       </section>
-      <div class="flex-right" id="summer">
+
+      <section id="summer">
+      <div class="flex-right">
         <div class="img">
           <img src="berries.jpeg" />
           <figcaption>First of many trips to the berry fields</figcaption>
@@ -100,6 +104,8 @@
           <p>It always feels like it finally starts to feel like summer when it is time to go back to school. I spent a lot of time outside this summer and I know how truly I will miss the sun and warm air as the leaves start to change and days get shorter and shorter. I haven’t been camping since I was in the 2nd or 3rd grade and it was such a joy. You can always sign me up for a remote, tech-free getaway. Sometimes I wish I could live 100% disconnected and off-grid. Sometime I question my desired career path.</p>
         </div>
       </div>
+    </section>
+
       <section id="fall">
         <div class="flex-left">
           <div class="img">
@@ -133,7 +139,9 @@
           </div>
         </div>
       </section>
-      <div class="flex-left" id="winter">
+
+      <section id="winter">
+      <div class="flex-left" >
         <div class="text">
           <p>Oh what a lovely couple weeks it has been. The winter cold has been biting bad but the people (and pets) I get to spend time with every week are making me feel so fulfilled and warm. Ever since the new year began, I’ve been tagging along with Ella to her campus and have been zooming/working from there. It’s so weird to have missed being in that school environment.</p>
         </div>
@@ -164,6 +172,7 @@
           <figcaption>Backyard views</figcaption>
         </div>
       </div>
+    </section>
     </div>
   </body>
 </html>
